--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Web Scraper</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 </head>
-<body>
-  Web Scraper
+<body ng-app="app">
+  <h2>Web Scraper</h2>
+
+  <div ui-view></div>
+
+  <script src="//code.angularjs.org/1.3.15/angular.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/app.routes.js"></script>
+  <script src="app/components/events/eventsController.js"></script>
 </body>
 </html>
