--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <script src="app/app.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/components/events/eventsController.js"></script>
+  <script src="app/services/eventsService.js"></script>
 </body>
 </html>
