--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
 </head>
 <body ng-app="app">
-  <h2>Web Scraper</h2>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a href="#" class="navbar-brand">Web Scraper</a>
+      </div>
+    </div>
+  </nav>
 
   <div ui-view></div>
 
