--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Web Scraper</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="app/app.css">
 </head>
 <body ng-app="app">
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -14,7 +15,12 @@
     </div>
   </nav>
 
-  <div ui-view></div>
+  <div class="container">
+    <div class="content-format">
+      <h2>Events</h2>
+      <div ui-view></div>
+    </div>
+  </div>
 
   <script src="//code.angularjs.org/1.3.15/angular.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.js"></script>
